[tool.poetry]
name = "gogo"
version = "0.1.0"
description = ""
authors = ["Ivan-Danyleiko <vanyadanuleyko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.28"
poetry = "^1.8.2"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
faker = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
